# win_api

./: CMakeLists.txt  main.cpp  win_api.cpp  win_api.h  win_shortcuts.cpp  win_shortcuts.h
